tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_94.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := ((((1 DIV 2) + (- 200)) - ((200 * y) MOD (z DIV 200))) * (- ((- 200) * (y MOD x))));
               p := (((- (200 + 200)) - (+ (y + 2))) # (((1 * 1) + (x + 2)) MOD ((200 DIV 2) MOD (2 DIV z))));
               y := (+ (((x + 1) - (+ 1223)) * ((+ 0) MOD (200 DIV 2))));
               p := (((- (- 1223)) * ((x * z) MOD (+ 200))) = (((+ 1223) - (+ 1223)) MOD ((y DIV y) MOD (+ 1))));
               p := (((+ (1 * y)) MOD (- (0 + z))) <= (((+ x) - (200 + y)) + (- (0 - y))));
  (* error *)  p := ((((p DIV z) + (- 200)) + ((200 - z) MOD (y * y))) < (((x + z) DIV (+ 2)) * (- (z + x))));
               y := (((- (z + 200)) MOD (- (200 DIV 0))) - (+ ((2 - 1) + (2 DIV 200))));
               x := ((- ((- x) DIV (- 2))) DIV (- (- (2 DIV 0))));
               p := (((- (y * z)) > ((- 200) - (- 1))) OR (((- 1223) + (z * y)) # ((x MOD y) MOD (z MOD 0))));
               y := ((((200 - 200) MOD (z MOD 1223)) - ((1 DIV 2) MOD (1 + 1))) MOD (- ((1223 * 2) - (1 MOD 1))))
END Test16.